ensure selection class is applied to all lanugages and remove letter spacing for arabic

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,8 @@ html[lang="ar"] .hero h3 {
   font-weight: 700;
 }
 
-html[lang="ar"] p {
+html[lang="ar"] p,
+html[lang="ar"] a {
   font-size: 1.4rem;
 }
 
@@ -21,6 +22,17 @@ html[lang="ar"] .eateries p {
 
 .letter-spacing {
   letter-spacing: 0.1rem;
+}
+
+html[lang="ar"] .letter-spacing {
+  letter-spacing: 0;
+}
+
+.language-selection {
+  margin-top: 3rem;
+  padding: 0.5rem;
+  border-radius: 0;
+  border: none;
 }
 
 body {
@@ -78,7 +90,17 @@ header {
   text-decoration: none;
   margin-top: 1rem;
   padding: 1rem 2rem;
+  color: black;
+  transition: all 400ms ease-in-out;
 }
+
+.hero a:hover {
+  color: white;
+  background-color: rgb(70, 44, 178);
+  transition: all 400ms ease-in-out;
+}
+
+
 
 p {
   font-weight: 400;
@@ -166,7 +188,6 @@ section.secondary {
   text-transform: uppercase;
   font-size: 0.9rem;
   font-weight: 700;
-  letter-spacing: 0.1rem;
   margin-bottom: 2rem;
 }
 
@@ -238,7 +259,6 @@ footer ul {
 
 footer a {
   color: white;
-  text-decoration: none;
 }
 
 @media (max-width: 900px) {
